# polinomial_decomposition

./: CMakeLists.txt  polinomial.cpp  polinomial.hpp  widget.cpp  widget.hpp  widget.ui
